--- a/HomeMates/VIew/Profile/ProfileHeaderViewCell.xib
+++ b/HomeMates/VIew/Profile/ProfileHeaderViewCell.xib
@@ -13,15 +13,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="226" id="KGk-i7-Jjw" customClass="ProfileHeaderViewCell" customModule="HomeMates" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="522" height="226"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="155" id="KGk-i7-Jjw" customClass="ProfileHeaderViewCell" customModule="HomeMates" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="401" height="155"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="522" height="225.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="401" height="154.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7sA-hh-dIV">
-                        <rect key="frame" x="-28" y="-54" width="375" height="150"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7sA-hh-dIV">
+                        <rect key="frame" x="20" y="0.0" width="375" height="150"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NjX-hF-c9I">
                                 <rect key="frame" x="0.0" y="114" width="375" height="36"/>
@@ -76,19 +76,9 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home ID:  88888888" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bvh-io-rg6">
-                                <rect key="frame" x="146" y="80" width="147" height="20"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="fRn-rU-eAp"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" name="Y1"/>
                         <constraints>
-                            <constraint firstItem="bvh-io-rg6" firstAttribute="bottom" secondItem="1le-bz-hmJ" secondAttribute="bottom" id="28Q-Q3-nCr"/>
                             <constraint firstAttribute="trailing" secondItem="NjX-hF-c9I" secondAttribute="trailing" id="89u-rN-AgL"/>
                             <constraint firstItem="XsK-b4-4pm" firstAttribute="centerY" secondItem="1le-bz-hmJ" secondAttribute="centerY" id="9Bj-h1-6zw"/>
                             <constraint firstItem="NjX-hF-c9I" firstAttribute="leading" secondItem="7sA-hh-dIV" secondAttribute="leading" id="PnI-VJ-bl1"/>
@@ -96,14 +86,19 @@
                             <constraint firstAttribute="height" constant="150" id="TSZ-9I-SJf"/>
                             <constraint firstItem="XsK-b4-4pm" firstAttribute="leading" secondItem="1le-bz-hmJ" secondAttribute="trailing" constant="30" id="aJb-NU-my0"/>
                             <constraint firstItem="1le-bz-hmJ" firstAttribute="leading" secondItem="7sA-hh-dIV" secondAttribute="leading" constant="36" id="fWd-FM-Wd8"/>
-                            <constraint firstItem="bvh-io-rg6" firstAttribute="leading" secondItem="XsK-b4-4pm" secondAttribute="leading" id="pzR-ka-VYi"/>
                             <constraint firstAttribute="bottom" secondItem="NjX-hF-c9I" secondAttribute="bottom" id="z1r-lz-QGY"/>
                         </constraints>
                     </view>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="7sA-hh-dIV" secondAttribute="bottom" id="CYe-mo-5QK"/>
+                    <constraint firstAttribute="trailing" secondItem="7sA-hh-dIV" secondAttribute="trailing" id="Gd5-HV-XX9"/>
+                    <constraint firstItem="7sA-hh-dIV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="YWT-wO-ZJx"/>
+                    <constraint firstItem="7sA-hh-dIV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="jHd-4J-f0E"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="140.57971014492756" y="153.34821428571428"/>
+            <point key="canvasLocation" x="-152.89855072463769" y="90.736607142857139"/>
         </tableViewCell>
     </objects>
     <resources>
