Change the layout of the lobby page

--- a/HomeMates/VIew/Profile.storyboard
+++ b/HomeMates/VIew/Profile.storyboard
@@ -18,27 +18,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4zL-5D-6e6">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="2ZP-UN-se1">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <connections>
-                                    <outlet property="dataSource" destination="aBP-Bk-liO" id="QRk-eo-xTr"/>
-                                    <outlet property="delegate" destination="aBP-Bk-liO" id="AwC-uW-1uo"/>
+                                    <outlet property="dataSource" destination="aBP-Bk-liO" id="osN-Kx-Bid"/>
+                                    <outlet property="delegate" destination="aBP-Bk-liO" id="xBb-1H-lAX"/>
                                 </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="4zL-5D-6e6" firstAttribute="top" secondItem="OFX-ZF-l0d" secondAttribute="top" id="8gI-kh-Vk5"/>
-                            <constraint firstItem="OFX-ZF-l0d" firstAttribute="trailing" secondItem="4zL-5D-6e6" secondAttribute="trailing" id="Fn4-DN-PJX"/>
-                            <constraint firstItem="OFX-ZF-l0d" firstAttribute="bottom" secondItem="4zL-5D-6e6" secondAttribute="bottom" id="Yv6-gg-21Y"/>
-                            <constraint firstItem="4zL-5D-6e6" firstAttribute="leading" secondItem="OFX-ZF-l0d" secondAttribute="leading" id="qYH-oP-luW"/>
+                            <constraint firstItem="2ZP-UN-se1" firstAttribute="top" secondItem="OFX-ZF-l0d" secondAttribute="top" id="JVq-y3-6Zd"/>
+                            <constraint firstItem="2ZP-UN-se1" firstAttribute="leading" secondItem="OFX-ZF-l0d" secondAttribute="leading" id="gqN-I9-1OF"/>
+                            <constraint firstItem="OFX-ZF-l0d" firstAttribute="trailing" secondItem="2ZP-UN-se1" secondAttribute="trailing" id="j3w-gr-WLZ"/>
+                            <constraint firstItem="OFX-ZF-l0d" firstAttribute="bottom" secondItem="2ZP-UN-se1" secondAttribute="bottom" id="rzz-9R-QOh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="OFX-ZF-l0d"/>
                     </view>
                     <navigationItem key="navigationItem" id="5eL-8y-AZh"/>
                     <connections>
-                        <outlet property="tableView" destination="4zL-5D-6e6" id="aCw-Zh-WNF"/>
+                        <outlet property="tableView" destination="2ZP-UN-se1" id="Cym-3B-pYu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gZ6-b4-L0Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
