--- a/HomeMates/VIew/Lobby/LobbyHeaderCell.xib
+++ b/HomeMates/VIew/Lobby/LobbyHeaderCell.xib
@@ -13,28 +13,28 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="174" id="KGk-i7-Jjw" customClass="LobbyHeaderCell" customModule="HomeMates" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="649" height="174"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="290" id="KGk-i7-Jjw" customClass="LobbyHeaderCell" customModule="HomeMates" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="649" height="290"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="649" height="173.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="649" height="289.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4B4-Db-hDp">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nln-1N-Vbe">
-                                <rect key="frame" x="0.0" y="114" width="375" height="36"/>
+                                <rect key="frame" x="0.0" y="168" width="375" height="32"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Bullhorn_36px" translatesAutoresizingMaskIntoConstraints="NO" id="dVH-Ii-0Vo">
-                                        <rect key="frame" x="20" y="3" width="30" height="30"/>
+                                        <rect key="frame" x="20" y="1" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="8pI-lF-xR0"/>
                                             <constraint firstAttribute="height" constant="30" id="uAm-VX-uEr"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="這裡希望做一個跑馬燈的訊息公告？" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JKt-7S-BEQ">
-                                        <rect key="frame" x="66" y="9" width="293" height="18"/>
+                                        <rect key="frame" x="66" y="7" width="293" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -44,7 +44,7 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="375" id="Bkf-cp-mO7"/>
                                     <constraint firstItem="dVH-Ii-0Vo" firstAttribute="centerY" secondItem="nln-1N-Vbe" secondAttribute="centerY" id="H4H-No-PZX"/>
-                                    <constraint firstAttribute="height" constant="36" id="RFF-Gs-QRD"/>
+                                    <constraint firstAttribute="height" constant="32" id="RFF-Gs-QRD"/>
                                     <constraint firstItem="JKt-7S-BEQ" firstAttribute="leading" secondItem="dVH-Ii-0Vo" secondAttribute="trailing" constant="16" id="Wxr-FD-uni"/>
                                     <constraint firstItem="JKt-7S-BEQ" firstAttribute="centerY" secondItem="nln-1N-Vbe" secondAttribute="centerY" id="jOd-7M-dtn"/>
                                     <constraint firstAttribute="trailing" secondItem="JKt-7S-BEQ" secondAttribute="trailing" constant="16" id="tYe-Co-sOv"/>
@@ -52,7 +52,7 @@
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="q1h-s6-dEj">
-                                <rect key="frame" x="36" y="20" width="80" height="80"/>
+                                <rect key="frame" x="147.5" y="20" width="80" height="80"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="SVn-XO-bc9"/>
@@ -71,39 +71,36 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="群組名稱在這邊" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iwy-Gm-tme">
-                                <rect key="frame" x="146" y="48" width="143" height="24"/>
+                                <rect key="frame" x="116" y="112" width="143" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home ID:  88888888" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ua9-dG-jSk">
-                                <rect key="frame" x="146" y="80" width="147" height="20"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="Pbd-AG-0gn"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home ID:  88888888" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ua9-dG-jSk">
+                                <rect key="frame" x="114" y="144" width="147" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gDb-M4-jOE">
-                                <rect key="frame" x="324" y="78" width="31" height="24"/>
+                                <rect key="frame" x="324" y="142" width="31" height="24"/>
                                 <state key="normal" image="OtherMember"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" name="Y1"/>
                         <constraints>
-                            <constraint firstItem="gDb-M4-jOE" firstAttribute="centerY" secondItem="ua9-dG-jSk" secondAttribute="centerY" id="3kJ-iQ-aSJ"/>
-                            <constraint firstItem="q1h-s6-dEj" firstAttribute="leading" secondItem="4B4-Db-hDp" secondAttribute="leading" constant="36" id="5bI-Jj-axd"/>
+                            <constraint firstItem="nln-1N-Vbe" firstAttribute="top" secondItem="gDb-M4-jOE" secondAttribute="bottom" constant="2" id="76b-La-Pjk"/>
                             <constraint firstAttribute="trailing" secondItem="nln-1N-Vbe" secondAttribute="trailing" id="Cgs-f4-16m"/>
-                            <constraint firstItem="iwy-Gm-tme" firstAttribute="centerY" secondItem="q1h-s6-dEj" secondAttribute="centerY" id="GJb-AO-bhd"/>
-                            <constraint firstAttribute="trailing" secondItem="gDb-M4-jOE" secondAttribute="trailing" constant="20" id="Hv2-bF-uwv"/>
-                            <constraint firstAttribute="height" constant="150" id="JlJ-Ne-m03"/>
+                            <constraint firstItem="ua9-dG-jSk" firstAttribute="top" secondItem="iwy-Gm-tme" secondAttribute="bottom" constant="8" symbolic="YES" id="Fgl-jA-zkz"/>
+                            <constraint firstItem="iwy-Gm-tme" firstAttribute="centerX" secondItem="q1h-s6-dEj" secondAttribute="centerX" id="Fgz-Ln-Et6"/>
+                            <constraint firstAttribute="height" constant="200" id="JlJ-Ne-m03"/>
                             <constraint firstAttribute="bottom" secondItem="nln-1N-Vbe" secondAttribute="bottom" id="L1o-7v-LpW"/>
-                            <constraint firstItem="iwy-Gm-tme" firstAttribute="leading" secondItem="q1h-s6-dEj" secondAttribute="trailing" constant="30" id="R1q-RM-1xg"/>
+                            <constraint firstItem="iwy-Gm-tme" firstAttribute="top" secondItem="q1h-s6-dEj" secondAttribute="bottom" constant="12" id="LjK-sg-cam"/>
+                            <constraint firstAttribute="trailing" secondItem="gDb-M4-jOE" secondAttribute="trailing" constant="20" id="kQ6-O5-eSE"/>
+                            <constraint firstItem="q1h-s6-dEj" firstAttribute="centerX" secondItem="4B4-Db-hDp" secondAttribute="centerX" id="lCT-sO-Q6F"/>
                             <constraint firstItem="nln-1N-Vbe" firstAttribute="leading" secondItem="4B4-Db-hDp" secondAttribute="leading" id="lWi-Y8-Hd1"/>
-                            <constraint firstItem="ua9-dG-jSk" firstAttribute="leading" secondItem="iwy-Gm-tme" secondAttribute="leading" id="u6h-UB-x2f"/>
+                            <constraint firstItem="ua9-dG-jSk" firstAttribute="centerX" secondItem="iwy-Gm-tme" secondAttribute="centerX" id="y0X-vX-9cU"/>
                             <constraint firstItem="q1h-s6-dEj" firstAttribute="top" secondItem="4B4-Db-hDp" secondAttribute="top" constant="20" id="yXd-BZ-T0x"/>
-                            <constraint firstItem="ua9-dG-jSk" firstAttribute="bottom" secondItem="q1h-s6-dEj" secondAttribute="bottom" id="yh7-37-c9v"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -121,7 +118,7 @@
                 <outlet property="groupName" destination="iwy-Gm-tme" id="foC-cN-77w"/>
                 <outlet property="lubbyBulletin" destination="JKt-7S-BEQ" id="HH7-54-yBG"/>
             </connections>
-            <point key="canvasLocation" x="47.826086956521742" y="35.491071428571423"/>
+            <point key="canvasLocation" x="47.10144927536232" y="73.660714285714278"/>
         </tableViewCell>
     </objects>
     <resources>
