Establish the layout of Task List page and relayout the taskTableViewCell

--- a/HomeMates/VIew/Profile.storyboard
+++ b/HomeMates/VIew/Profile.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="2ZP-UN-se1">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="aBP-Bk-liO" id="osN-Kx-Bid"/>
@@ -29,7 +29,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="2ZP-UN-se1" firstAttribute="top" secondItem="OFX-ZF-l0d" secondAttribute="top" id="JVq-y3-6Zd"/>
+                            <constraint firstItem="2ZP-UN-se1" firstAttribute="top" secondItem="3h9-u5-GU1" secondAttribute="top" id="JVq-y3-6Zd"/>
                             <constraint firstItem="2ZP-UN-se1" firstAttribute="leading" secondItem="OFX-ZF-l0d" secondAttribute="leading" id="gqN-I9-1OF"/>
                             <constraint firstItem="OFX-ZF-l0d" firstAttribute="trailing" secondItem="2ZP-UN-se1" secondAttribute="trailing" id="j3w-gr-WLZ"/>
                             <constraint firstItem="OFX-ZF-l0d" firstAttribute="bottom" secondItem="2ZP-UN-se1" secondAttribute="bottom" id="rzz-9R-QOh"/>
