--- a/HomeMates/VIew/Task.storyboard
+++ b/HomeMates/VIew/Task.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="n4N-i4-U6m">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HZO-iu-qGs">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,20 +10,66 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--任務列表-->
         <scene sceneID="Pcd-FF-OuJ">
             <objects>
-                <viewController id="n4N-i4-U6m" sceneMemberID="viewController">
+                <viewController id="n4N-i4-U6m" customClass="TaskListViewController" customModule="HomeMates" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="b2J-Rc-XiS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="3x3-6Y-jpy">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="n4N-i4-U6m" id="dJr-jz-GRh"/>
+                                    <outlet property="delegate" destination="n4N-i4-U6m" id="wds-LQ-cbx"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="aa8-GZ-kOc" firstAttribute="trailing" secondItem="3x3-6Y-jpy" secondAttribute="trailing" id="kMM-zS-E5P"/>
+                            <constraint firstItem="aa8-GZ-kOc" firstAttribute="bottom" secondItem="3x3-6Y-jpy" secondAttribute="bottom" id="mLu-em-MtL"/>
+                            <constraint firstItem="3x3-6Y-jpy" firstAttribute="leading" secondItem="aa8-GZ-kOc" secondAttribute="leading" id="oZn-ri-ri9"/>
+                            <constraint firstItem="3x3-6Y-jpy" firstAttribute="top" secondItem="aa8-GZ-kOc" secondAttribute="top" id="wrC-Yc-hDT"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="aa8-GZ-kOc"/>
                     </view>
+                    <navigationItem key="navigationItem" title="任務列表" id="0QI-4b-kN3">
+                        <barButtonItem key="rightBarButtonItem" image="Addition_36px" id="1wJ-rG-U0i"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="3x3-6Y-jpy" id="OLd-jn-9na"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ban-gq-fe6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="109" y="113"/>
+            <point key="canvasLocation" x="1047.2" y="112.89355322338831"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="6JW-UH-Nf6">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HZO-iu-qGs" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cXl-Rn-TVb">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.29019607843137252" green="0.22352941176470587" blue="0.18431372549019609" alpha="1" colorSpace="calibratedRGB"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="n4N-i4-U6m" kind="relationship" relationship="rootViewController" id="fX9-3c-e97"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3UA-66-YlH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="108" y="112.89355322338831"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Addition_36px" width="36" height="36"/>
+    </resources>
 </document>
